# oop-laba-4

./: CMakeLists.txt  README.md
include/: Array.h  Figure.h  Point.h  Rectangle.h  Rhombus.h  Trapezoid.h
src/: main.cpp
tests/: test_figures.cpp
